// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MovieCard > Snapshot Tests > should render MovieCard with complete movie data 1`] = `
<article
  class="movie-card movie-card--medium"
>
  <figure
    class="image-container"
  >
    <img
      alt="Test Movie poster"
      class="image"
      loading="lazy"
      src="mocked-image-url"
    />
  </figure>
  <section
    class="content"
  >
    <header
      class="header"
    >
      <h2
        class="title"
      >
        Test Movie
      </h2>
      <aside
        class="meta"
      >
        <time
          class="year"
          datetime="2023-12-25"
        >
          2023
        </time>
        <span
          aria-label="Rating: 8.5 out of 10"
          class="rating"
        >
          ★ 
          8.5
          /10
        </span>
      </aside>
    </header>
    <section
      class="overview-container"
    >
      <p
        class="overview "
      >
        A test movie description
      </p>
    </section>
  </section>
</article>
`;

exports[`MovieCard > Snapshot Tests > should render MovieCard with missing data 1`] = `
<article
  class="movie-card movie-card--medium"
>
  <figure
    class="image-container"
  >
    <img
      alt="Movie poster placeholder"
      class="image"
      src="/placeholder-movie.jpg"
    />
  </figure>
  <section
    class="content"
  >
    <header
      class="header"
    >
      <h2
        class="title"
      >
        Title Missing
      </h2>
      <aside
        class="meta"
      >
        <time
          class="year"
        >
          Missing year
        </time>
        <span
          aria-label="Rating: N/A out of 10"
          class="rating"
        >
          ★ 
          N/A
          /10
        </span>
      </aside>
    </header>
    <section
      class="overview-container"
    >
      <p
        class="overview "
      >
        A test movie description
      </p>
    </section>
  </section>
</article>
`;

exports[`MovieCard > Snapshot Tests > should render MovieCard with missing poster 1`] = `
<article
  class="movie-card movie-card--medium"
>
  <figure
    class="image-container"
  >
    <img
      alt="Movie poster placeholder"
      class="image"
      src="/placeholder-movie.jpg"
    />
  </figure>
  <section
    class="content"
  >
    <header
      class="header"
    >
      <h2
        class="title"
      >
        Test Movie
      </h2>
      <aside
        class="meta"
      >
        <time
          class="year"
          datetime="2023-12-25"
        >
          2023
        </time>
        <span
          aria-label="Rating: 8.5 out of 10"
          class="rating"
        >
          ★ 
          8.5
          /10
        </span>
      </aside>
    </header>
    <section
      class="overview-container"
    >
      <p
        class="overview "
      >
        A test movie description
      </p>
    </section>
  </section>
</article>
`;
